feat: qrcode component for payments with pix

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "maska": "3.0.0-beta4",
     "roboto-fontface": "*",
     "vue": "^3.4.21",
+    "vue-qrcode": "^2.2.2",
     "vuetify": "^3.5.8"
   },
   "devDependencies": {
