--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint:prettier": "prettier . --check",
     "prettierfix": "prettier --write --list-different .",
     "lintfix": "eslint . --fix",
-    "prepare": "husky"
+    "prepare": "husky",
+    "test": "jest"
   },
   "dependencies": {
     "@mdi/font": "6.2.95",
@@ -23,7 +24,8 @@
   },
   "devDependencies": {
     "@babel/types": "^7.24.0",
-    "@types/node": "^20.11.25",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.14.7",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/eslint-config-typescript": "^13.0.0",
     "eslint": "^8.57.0",
@@ -34,10 +36,12 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-vue": "^9.22.0",
     "husky": "^9.0.11",
+    "jest": "^29.7.0",
     "msw": "^2.3.1",
     "pinia": "^2.1.7",
     "prettier": "^3.3.2",
     "sass": "^1.71.1",
+    "ts-jest": "^29.1.5",
     "typescript": "^5.4.2",
     "unplugin-auto-import": "^0.17.5",
     "unplugin-fonts": "^1.1.1",
