--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "prettierfix": "prettier --write --list-different .",
     "lintfix": "eslint . --fix",
     "prepare": "husky",
-    "test": "jest"
+    "test": "vitest"
   },
   "dependencies": {
     "@mdi/font": "6.2.95",
@@ -24,10 +24,11 @@
   },
   "devDependencies": {
     "@babel/types": "^7.24.0",
-    "@types/jest": "^29.5.12",
+    "@pinia/testing": "^0.1.3",
     "@types/node": "^20.14.7",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/eslint-config-typescript": "^13.0.0",
+    "@vue/test-utils": "^2.4.6",
     "eslint": "^8.57.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.29.1",
@@ -36,12 +37,12 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-vue": "^9.22.0",
     "husky": "^9.0.11",
-    "jest": "^29.7.0",
+    "jsdom": "^24.1.0",
     "msw": "^2.3.1",
     "pinia": "^2.1.7",
     "prettier": "^3.3.2",
+    "resize-observer-polyfill": "^1.5.1",
     "sass": "^1.71.1",
-    "ts-jest": "^29.1.5",
     "typescript": "^5.4.2",
     "unplugin-auto-import": "^0.17.5",
     "unplugin-fonts": "^1.1.1",
@@ -50,6 +51,7 @@
     "vite": "^5.1.5",
     "vite-plugin-vue-layouts": "^0.11.0",
     "vite-plugin-vuetify": "^2.0.3",
+    "vitest": "^1.6.0",
     "vue-router": "^4.3.0",
     "vue-tsc": "^2.0.6"
   },
